--- a/index.Rmd
+++ b/index.Rmd
@@ -3,11 +3,10 @@ title: "Mental Health Post COVID-19 Pandemic"
 output: 
   html_document:
     toc: true
+    includes: 
+      in_header: hero-image.html
     toc_float: true
 ---
-
-**Fei Xiao  Kelly Luo  Tongtong Zhu  Yi Fang  Yujie Huang**
-
 
 **Welcome to Our Project for P8105!**
 
@@ -26,3 +25,11 @@ is an important part of overall health and well-being. Mental health includes ou
 
 Let's begin with the general status of [mental illness](mental_illness.html)!
 
+**Mental Health Quiz **
+
+There are still many harmful attitudes and misunderstandings around mental illness, which may make people ignore their mental health, fuel stigma, and make it harder to reach out for help. Take the following quiz and see if you can separate the myths from the facts.
+
+[Mental Health Quiz](https://www.cdc.gov/mentalhealth/quiz/index.htm)
+
+
+**Fei Xiao  Kelly Luo  Tongtong Zhu  Yi Fang  Yujie Huang**
