--- a/index.Rmd
+++ b/index.Rmd
@@ -34,11 +34,8 @@ There are still many harmful attitudes and misunderstandings around mental illne
 
 [Mental Health Quiz](https://www.cdc.gov/mentalhealth/quiz/index.htm)
 
+<img src="image/mental health quiz pics.png" alt="drawing" longth="650" width="500"> 
 
 ### Our Team
 
-**Fei Xiao 
-Kelly Luo  
-Tongtong Zhu 
-Yi Fang 
-Yujie Huang**
+**Fei Xiao Kelly Luo  Tongtong Zhu Yi Fang Yujie Huang**
