--- a/index.Rmd
+++ b/index.Rmd
@@ -38,4 +38,4 @@ There are still many harmful attitudes and misunderstandings around mental illne
 
 ### Our Team
 
-**Fei Xiao Kelly Luo  Tongtong Zhu Yi Fang Yujie Huang**
+**Fei Xiao,   Kelly Luo,   Tongtong Zhu,   Yi Fang,   Yujie Huang**
