--- a/index.Rmd
+++ b/index.Rmd
@@ -28,7 +28,7 @@ Mental health is an important part of overall health and well-being. Mental heal
 
 Let's begin with the general status of [mental illness](mental_illness.html)!
 
-### Mental Health Quiz 
+### Mental Health Self-Diagnosis 
 
 There are still many harmful attitudes and misunderstandings around mental illness, which may make people ignore their mental health, fuel stigma, and make it harder to reach out for help. Take the following quiz and see if you can separate the myths from the facts.
 
