--- a/analysis/dashbboards/anxiety_trend_dashboard.Rmd
+++ b/analysis/dashbboards/anxiety_trend_dashboard.Rmd
@@ -5,7 +5,7 @@ output:
     orientation: columns
     vertical_layout: fill
     source: embed
-    theme: journal
+    theme: flatly
 ---
 
 ```{r setup, include=FALSE}
