--- a/index.Rmd
+++ b/index.Rmd
@@ -8,11 +8,20 @@ output:
     toc_float: true
 ---
 
-&nbsp;
 
-**Welcome to Our Project for P8105!**
 
-&nbsp;
+## Welcome to Our Project for P8105!
+
+| [![1](image/1.jpg){width=200, height=200}](analysis/project_report.html)| [![2](image/2.jpg){width=200, height=200}](analysis/project_report.html) |[![3](image/3.jpg){width=200, height=200}](analysis/project_report.html)|
+|:--:| :--:| :--:| 
+| [*Motivation*](analysis/project_report.html) | [*Mental Health Self-Diagnosis*](analysis/project_report.html) | [*Data Source*](analysis/project_report.html) |
+| [![4](image/4.jpg){width=200, height=200}](analysis/project_report.html)| [![5](image/5.jpg){width=200, height=200}](analysis/project_report.html) |[![6](image/6.jpg){width=200, height=200}](analysis/project_report.html)|
+| [*4*](analysis/project_report.html) | [*5*](analysis/project_report.html) | [*Our Team*](analysis/project_report.html) |
+
+
+
+
+
 
 ### Motivation
 
