--- a/index.Rmd
+++ b/index.Rmd
@@ -43,10 +43,10 @@ Let's begin with the general status of [mental illness](mental_illness.html)!
 ### Mental Health Quiz 
 
 There are still many harmful attitudes and misunderstandings around mental illness, which may make people ignore their mental health, fuel stigma, and make it harder to reach out for help. Take the following quiz and see if you can separate the myths from the facts.
+<p align="center">
+  [![Mental Health Quiz](image/mental health quiz pics.png){length=650 width=800}](https://www.cdc.gov/mentalhealth/quiz/index.htm)
+</p>
 
-[Mental Health Quiz](https://www.cdc.gov/mentalhealth/quiz/index.htm)
-
-<img src="image/mental health quiz pics.png" alt="drawing" longth="650" width="500"> 
 
 ### Our Team
 
